--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 leetCodeQ2030.js
+node_modules
+**/node_modules
+package-lock.json
+package.json
+*.json
+package-lock.json
+package.json
+node_modules/.package-lock.json
