--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
     "@datastructures-js/heap": "^4.3.2",
-    "@datastructures-js/priority-queue": "^6.3.0"
+    "@datastructures-js/priority-queue": "^6.3.0",
+    "cheerio": "^1.0.0",
+    "cors-anywhere": "^0.4.4",
+    "node-fetch": "^3.3.2"
   }
 }
