--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name":"test",
+  "name": "test",
   "type": "module",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "@datastructures-js/heap": "^4.3.2",
     "@datastructures-js/priority-queue": "^6.3.0",
     "cheerio": "^1.0.0",
     "cors-anywhere": "^0.4.4",
+    "express": "^4.21.1",
     "node-fetch": "^3.3.2"
   }
 }
